--- a/package.json
+++ b/package.json
@@ -79,5 +79,8 @@
 	"bugs": {
 		"url": "https://github.com/JacobLinCool/d1-manager/issues"
 	},
-	"packageManager": "pnpm@8.14.3"
+	"packageManager": "pnpm@8.14.3",
+	"dependencies": {
+		"pnpm": "^9.0.6"
+	}
 }
